--- a/static/index.html
+++ b/static/index.html
@@ -328,7 +328,7 @@
                                 <ul> language
                                     <li>en - For English</li>
                                     <li>ar-tashkeel - For Arabic with tashkeel.</li>
-                                    <li>ar-noTashkeel - For Arabic without tashkeel.</li>
+                                    <li>ar-notashkeel - For Arabic without tashkeel.</li>
 
                                 </ul>
                             </div>
